--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.13.2"
 androidxJunit = "1.1.6"
 espressoCoreVersion = "3.5.1"
+googlePlayServicesLocation = "21.0.1"
 kotlin = "2.0.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -13,6 +14,7 @@ composeBom = "2024.09.00"
 mockitoCore = "5.21.0"
 playServicesLocation = "22.3.0"
 workRuntimeKtx = "2.11.1"
+playServicesLocationVersion = "21.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,6 +36,8 @@ androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-te
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
+gms-play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocationVersion" }
+play-services-location-v2101 = { module = "com.google.android.gms:play-services-location", version.ref = "googlePlayServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
